# physbubble-bot-worker

./: Dockerfile  README.md  pyproject.toml
src/: main.py
