[tool.poetry]
name = "physbubble-bot-worker"
version = "0.1.0"
description = "Telegram bot worker for physbubble"
authors = ["Saeed"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-telegram-bot = "^20.8"
orjson = "^3.10.3"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
